--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@ Etternavn: <span id="utAdresse"></span>
             navn: $("#navn").val(),
             adresse: $("#adresse").val()
         }
-        $.get("/", kunde, function (data){
+        $.post("/", kunde, function (data){
             $("#utNavn").html(data.navn);
             $("#utAdresse").html(data.adresse)
         });
